--- a/Revels'18/Base.lproj/Main.storyboard
+++ b/Revels'18/Base.lproj/Main.storyboard
@@ -202,57 +202,64 @@
                                     <constraint firstAttribute="bottom" secondItem="uOo-Y1-Y3i" secondAttribute="bottom" constant="8" id="uXw-6h-fLe"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hzx-YL-F3Y">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ygV-Mh-nXU">
                                 <rect key="frame" x="0.0" y="44" width="320" height="411"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ScheduleCell" rowHeight="60" id="kzW-ln-n60" customClass="ScheduleCell" customModule="Revels_18" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="60"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kzW-ln-n60" id="YZs-kI-O5p">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
+                                <color key="backgroundColor" red="0.9534700550399795" green="0.94886391950838533" blue="0.95807619057157356" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WqE-id-6Hg">
+                                    <size key="itemSize" width="310" height="70"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="5" minY="10" maxX="5" maxY="10"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ScheduleCell" id="Hli-kL-zpY" customClass="ScheduleCell" customModule="Revels_18" customModuleProvider="target">
+                                        <rect key="frame" x="5" y="10" width="310" height="70"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="310" height="70"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ehb-XV-FTx">
-                                                    <rect key="frame" x="15" y="9" width="109" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eaP-1P-oUS">
+                                                    <rect key="frame" x="20" y="13" width="280" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xcr-vv-xoo">
-                                                    <rect key="frame" x="15" y="28" width="96" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uS9-g5-AS5">
+                                                    <rect key="frame" x="20" y="37" width="280" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                        </tableViewCellContentView>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
-                                            <outlet property="categoryLabel" destination="Xcr-vv-xoo" id="VsC-T0-KUb"/>
-                                            <outlet property="eventName" destination="ehb-XV-FTx" id="3af-uh-yyC"/>
+                                            <outlet property="categoryLabel" destination="uS9-g5-AS5" id="Slg-v7-C3I"/>
+                                            <outlet property="eventName" destination="eaP-1P-oUS" id="8Q1-cg-ZPZ"/>
                                         </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="ygV-Mh-nXU" firstAttribute="top" secondItem="KHP-Jf-PLq" secondAttribute="bottom" id="1FL-Gy-bQS"/>
+                            <constraint firstItem="ygV-Mh-nXU" firstAttribute="trailing" secondItem="Xrs-vj-IY8" secondAttribute="trailing" id="3L4-Zf-PyW"/>
                             <constraint firstAttribute="trailing" secondItem="KHP-Jf-PLq" secondAttribute="trailing" id="6sl-m5-ZfY"/>
-                            <constraint firstItem="hzx-YL-F3Y" firstAttribute="leading" secondItem="Xrs-vj-IY8" secondAttribute="leading" id="CRI-SA-jbV"/>
-                            <constraint firstItem="hzx-YL-F3Y" firstAttribute="bottom" secondItem="Xrs-vj-IY8" secondAttribute="bottom" id="P7r-jJ-NFL"/>
-                            <constraint firstItem="hzx-YL-F3Y" firstAttribute="trailing" secondItem="Xrs-vj-IY8" secondAttribute="trailing" id="SeR-OV-sB5"/>
                             <constraint firstItem="KHP-Jf-PLq" firstAttribute="top" secondItem="Xrs-vj-IY8" secondAttribute="top" id="XNj-aE-bCu"/>
-                            <constraint firstItem="hzx-YL-F3Y" firstAttribute="top" secondItem="KHP-Jf-PLq" secondAttribute="bottom" id="rz8-fH-DiI"/>
+                            <constraint firstItem="ygV-Mh-nXU" firstAttribute="leading" secondItem="Xrs-vj-IY8" secondAttribute="leading" id="bsz-CG-lqC"/>
                             <constraint firstItem="KHP-Jf-PLq" firstAttribute="leading" secondItem="oZU-IS-g5d" secondAttribute="leading" id="xz5-Xd-c0k"/>
+                            <constraint firstItem="ygV-Mh-nXU" firstAttribute="bottom" secondItem="Xrs-vj-IY8" secondAttribute="bottom" id="ze7-84-wRs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Xrs-vj-IY8"/>
                     </view>
                     <navigationItem key="navigationItem" title="Schedule" id="ocR-on-hf7"/>
                     <connections>
+                        <outlet property="collectionView" destination="ygV-Mh-nXU" id="Vdd-Xb-AFo"/>
                         <outlet property="segmentedControl" destination="uOo-Y1-Y3i" id="ipP-16-fbv"/>
-                        <outlet property="tableView" destination="hzx-YL-F3Y" id="U19-0A-r9j"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sES-Xg-iCC" userLabel="First Responder" sceneMemberID="firstResponder"/>
