--- a/Revels'18/Base.lproj/Main.storyboard
+++ b/Revels'18/Base.lproj/Main.storyboard
@@ -246,7 +246,7 @@
                                                         <constraint firstAttribute="height" constant="30" id="1FT-1Q-Aca"/>
                                                         <constraint firstAttribute="width" constant="30" id="lX6-tS-nUC"/>
                                                     </constraints>
-                                                    <state key="normal" image="Favorites"/>
+                                                    <state key="normal" image="HollowFavorites"/>
                                                 </button>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8jQ-YF-sYo">
                                                     <rect key="frame" x="15" y="5" width="70" height="70"/>
@@ -270,6 +270,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="eventName" destination="7yN-Sa-v8m" id="pPy-Qn-uK0"/>
+                                            <outlet property="favouriteButton" destination="Tuf-H0-FwF" id="ote-F8-85o"/>
                                             <outlet property="location" destination="ul2-UZ-vLS" id="flQ-Ay-aT9"/>
                                             <outlet property="time" destination="hJ4-ej-Wjc" id="Jun-v3-f6d"/>
                                         </connections>
@@ -573,14 +574,14 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="0.0" height="52"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KSq-k1-w4q">
-                                                            <rect key="frame" x="0.0" y="54" width="0.0" height="29"/>
+                                                            <rect key="frame" x="0.0" y="54" width="0.0" height="24.5"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Round" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3AT-SR-ZpN">
-                                                            <rect key="frame" x="0.0" y="85" width="0.0" height="10"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                                            <rect key="frame" x="0.0" y="80.5" width="0.0" height="14.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -604,6 +605,10 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="VZ6-lW-AnH" id="Erg-el-8ia"/>
+                                    <outlet property="delegate" destination="VZ6-lW-AnH" id="Y78-2N-j8G"/>
+                                </connections>
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xz8-FQ-6gJ">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
@@ -626,7 +631,6 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="UQN-86-xpA" firstAttribute="top" secondItem="xz8-FQ-6gJ" secondAttribute="bottom" id="361-a5-ehb"/>
                             <constraint firstItem="xz8-FQ-6gJ" firstAttribute="top" secondItem="BZ7-gL-m7m" secondAttribute="top" id="4e5-cd-PjA"/>
@@ -741,7 +745,6 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="gz7-7K-mVk">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
@@ -840,6 +843,7 @@
         <image name="Calendar" width="30" height="30"/>
         <image name="Categories" width="30" height="30"/>
         <image name="Favorites" width="30" height="30"/>
+        <image name="HollowFavorites" width="30" height="30"/>
         <image name="Home" width="30" height="30"/>
         <image name="More" width="30" height="30"/>
         <image name="Results" width="30" height="30"/>
